# ferrofluidos

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README  README.md  README.rst  userdic.txt
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
doc/: Constants.h  Link to MatrixFilesIO.cpp  Link to MatrixFilesIO.hpp  Link to MatrixFilesIO_test.cpp  Link to NavierStokes.hpp  Link to OwnMath.hpp  Link to Poisson.cpp  Link to Poisson.hpp  Link to Poisson_test.cpp  Link to SimpleTestReadAndWrite.cpp  Link to edp_01.cpp  Link to edp_05.cpp  Link to stdheader.hpp  NavierStokes.cpp  OwnMath.hpp  config  config~  main.cpp  stdheader.hpp~
doc/html/: Constants_8h.html  Constants_8h_source.html  Link_01to_01MatrixFilesIO_8cpp.html  Link_01to_01MatrixFilesIO_8hpp.html  Link_01to_01MatrixFilesIO_8hpp_source.html  Link_01to_01MatrixFilesIO__test_8cpp.html  Link_01to_01NavierStokes_8cpp.html  Link_01to_01NavierStokes_8hpp.html  Link_01to_01NavierStokes_8hpp_source.html  Link_01to_01OwnMath_8hpp.html  Link_01to_01OwnMath_8hpp_source.html  Link_01to_01Poisson_8cpp.html  Link_01to_01Poisson_8hpp.html  Link_01to_01Poisson_8hpp_source.html  Link_01to_01Poisson__test_8cpp.html  Link_01to_01SimpleTestReadAndWrite_8cpp.html  Link_01to_01edp__01_8cpp.html  Link_01to_01edp__05_8cpp.html  Link_01to_01main_8cpp.html  Link_01to_01stdheader_8hpp.html  Link_01to_01stdheader_8hpp_source.html  NavierStokes_8cpp.html  NavierStokes_8hpp.html  NavierStokes_8hpp_source.html  OwnMath_8hpp.html  OwnMath_8hpp_source.html  annotated.html  classMatrixFilesIO-members.html  classMatrixFilesIO.html  classNavierStokes-members.html  classNavierStokes.html  classPoisson-members.html  classPoisson.html  classes.html  files.html  formula.repository  functions.html  functions_func.html  globals.html  globals_defs.html  (+7 more)
doc/html/search/: all_61.js  (+58 more)
doc/latex/: Constants_8h.tex  Link_01to_01MatrixFilesIO_8cpp.tex  Link_01to_01MatrixFilesIO_8hpp.tex  Link_01to_01MatrixFilesIO__test_8cpp.tex  Link_01to_01NavierStokes_8cpp.tex  Link_01to_01NavierStokes_8hpp.tex  Link_01to_01OwnMath_8hpp.tex  Link_01to_01Poisson_8cpp.tex  Link_01to_01Poisson_8hpp.tex  Link_01to_01Poisson__test_8cpp.tex  Link_01to_01SimpleTestReadAndWrite_8cpp.tex  Link_01to_01edp__01_8cpp.tex  Link_01to_01edp__05_8cpp.tex  Link_01to_01main_8cpp.tex  Link_01to_01stdheader_8hpp.tex  NavierStokes_8cpp.tex  NavierStokes_8hpp.tex  OwnMath_8hpp.tex  annotated.tex  classMatrixFilesIO.tex  classNavierStokes.tex  classPoisson.tex  doxygen.sty  files.tex  main_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  stdheader_8hpp.tex
doxygen/: Doxyfile
include/: FFH.hh  MatrixFilesIO.hpp  NavierStokes.cpp  NavierStokes.hpp  OwnMath.hpp  Poisson.hpp  navierstokes.hh  sparsePD.hh  stdheader.hpp
include/OwnMath/: Constants.h  OwnMath.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
python/: .gitignore  Equação de Poisson com condições de fronteira de Dirichlet método direto.ipynb  Equação de Poisson com condições de fronteira de Neumann.ipynb  NavierStokes.ipynb  Solução Numérica de Navier Stokes.ipynb  SolvePoisson.ipynb  SolvePoissonEx2.ipynb  SolvePoissonNeumann.ipynb  poisson.py  solve_poisson.py
python/functions/: Poisson_functions.py
scripts/: CHECK_IF_FILE_EXISTS.m  OpenAndPlot.m  OpenAndPlot.m~  Poisson_test.sh  convertMatrixASCIItoBINARY.m
src/: CMakeLists.txt  Magnetism.jl  Makefile  MatrixFilesIO.cpp  MatrixFilesIO_test.cpp  NavierStokes.cpp  NavierStokes.jl  NavierTypes.jl  Poisson.cpp  Poisson_test.cpp  SimpleTestReadAndWrite.cpp  Transient.jl  checkDiv.py  cmake_install.cmake  compare.py  config.jl  daemon.py  dropbox_sync.py  edp_01.cpp  edp_02.cpp  edp_03.cpp  edp_04.cpp  edp_05.cpp  edp_06.cpp  frames.jl  hello.cpp  magnetism.jl  main.cpp  navierstokes.cc  navierstokes.jl  naviertest.cc  naviertest.jl  naviertypes.jl  plot.py  plotVvsDX2.jl  poisson.cc  poisson.jl  poisson2.py  poisson2py.cpp  poissonDirichletSparse.jl  (+13 more)
src/Test/: UnitTests.jl
tex/: .gitignore
tex/Eletromagnetismo/: ProblemaExemplo.tex  eletromag.tex  eletromagnetismo.tex  introducao.tex  pibic.bib  styles.sty
tex/Final Report 2013/: resumo-PROIC-Ataias.txt
tex/Final_Report/: .gitignore  bare_jrnl.fdb_latexmk  relatorioIEEE.aux  relatorioIEEE.fdb_latexmk  relatorioIEEE.fls  relatorioIEEE.out  relatorioIEEE.tex  resumo.txt
tex/NavierStokes/: NavierStokes.tex
tex/Poisson/: PoissonImplicitNeumann.tex
tex/Poster2015/: poster2015.tex  sample.bib
tex/Report2015_EN/: pibic.bib  report2015en.tex
tex/Report2016_EN/: equations.sty  pibic.bib  report2016en.tex
tex/Solution to the Cavity Problem/: eletromagnetismo.tex  introducao.tex  pgraphics.sty  pibic.tex  validacao.tex
tex/all/: equations.sty  fisica.tex  introducao.tex  nsprimitivas.tex  pgraphics.sty  pibic.tex  poisson.tex  styles.sty  validacao.tex
(+8 files in other folders)
